05/15/2008 -- Version 1.1.3
                Documentation fixed regarding the meaning of master_p.

05/14/2008 -- Version 1.1.2
                Samples take an extra parameter that is only written
                to output. It is useful for performance measurement.
                All solvers set the error string in the state if CG fails to
                converge.
05/08/2008 -- Version 1.1.1
	        Samples now really work.
		Some cleanup in top Makefile.in
		Extra defence in port/init.c, but still foolable.
		Configure error reporting improved.

05/06/2008 -- Version 1.1.0
                Shifted multisolver added.
                Samples installed in docs.

05/03/2008 -- transitory
               MxM solver added.
	       Sample codes added.

05/02/2008 -- Version 1.0.0 original release