@@ -1456,7 +1456,10 @@ Also, the macros
 \hline
 XXX & avp & Version 1.X.X. \\
 \hline
-May 15, 2008 & avp & Bug in the docs fixed (master node definition). \\
+May 17, 2008 & avp & Bug in error handling fixed. \\
+\hline
+May 15, 2008 & avp & Version 1.1.3. Bug in the docs fixed
+                           (master node definition). \\
 \hline
 May 14, 2008 & avp & Version 1.1.2. Solvers set error in the state if they
                      do not converge. Samples print a helpful marker. \\
